--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<head>
+<html lang="en"><head>
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
